--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </h1>
                         <div class="home__blob grid">
                             <div class="home__perfil">
-                                <img src="assets/img/_DSC6337.jpg" alt="home perfil">
+                                <img src="assets/img/_DSC6337-min.jpg" alt="home perfil">
                             </div>
                             <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
                             <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle">
