--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                                 <span class="contact__data-info">
                                     https://t.me/aswath2002
                                 </span>
-                                <a href="https://t.me/kritikmodi" target="_blank" class="contact__button">
+                                <a href="https://t.me/aswath2002" target="_blank" class="contact__button">
                                     Text me <i class="ri-arrow-right-line"></i>
                                 </a>
                             </div>
