--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             </p>
                         </div>
                         <div>
-                            <a href="assets/ASWATH C.pdf" download="Resume"><button class="button-85">RESUME</button></a>                           
+                            <a href="assets/ASWATH.pdf" download="Resume"><button class="button-85">RESUME</button></a>                           
                         </div>
                     </div>
 
